# gba-template

./: .gitignore  CMakeLists.txt  DevkitArmGBA.cmake
cmake/: ToolsGBA.cmake
resources/: idle.h  idle.s  run.h  run.s  run.xcf  tilemap.tmx  tileset16.tsx
source/: bg0.c  bg0.h  idle.c  idle.h  items.c  items.h  map_sample.c  map_sample.h  player.c  player.h  resources.c  resources.h  sprite.c  sprite.h  template.c  tile_map_sample.c  tile_map_sample.h
